[fix] hero img overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 body {
   font-family: $primary-font;
   background-color: #f0f1f6;
+  overflow-x: hidden;
 }
 
 @for $i from 1 to 5 {
